# suds

./: Cargo.toml
codegen/: Cargo.toml
codegen/src/: codegen.rs  lib.rs  preprocessor.rs  types.rs
examples/calculator/: Cargo.toml
examples/calculator/src/: main.rs
examples/trains/: Cargo.toml
examples/trains/src/: main.rs
macro/: Cargo.toml
macro/src/: lib.rs
src/: lib.rs
src/wsdl/: mod.rs  parser.rs  types.rs
suds/: Cargo.toml
suds/src/: main.rs
util/: Cargo.toml
util/src/: lib.rs  soap.rs  xml.rs
wsdl/: Cargo.toml
wsdl/src/: error.rs  lib.rs  parser.rs  types.rs
