[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paw = "1.0.0"
structopt = { version = "0.3.25", features = ["paw"] }
suds_macro = { path = "../../macro" }
suds_util = { path = "../../util" }
